--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "dev": "npx ts-node src/app.ts",
+    "build": "npx tsc",
+    "start": "node dist/src/app.js"
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "express": "^4.19.2",
+    "mysql2": "^3.10.2",
+    "prisma": "^5.16.1"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
-    "express": "^4.19.2",
     "jest": "^29.7.0",
-    "mysql2": "^3.10.2",
-    "prisma": "^5.16.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
